--- a/.github/workflows/ci-ubuntu.yml
+++ b/.github/workflows/ci-ubuntu.yml
@@ -43,6 +43,8 @@ jobs:
             LLVM_VERSION: 18
     name: Ubuntu ${{ matrix.OS_VERSION }} - LLVM ${{ matrix.LLVM_VERSION }}
     steps:
+      - name: Fix environment for ARM64 Linux runners (actions/partner-runner-images#25)
+        run: for var in PATH XDG_CONFIG_HOME; do sed -Ee "s/^/${var}=/" -e 's/(runner)admin/\1/g' <<< "${!var}"; done | tee -a "$GITHUB_ENV"
       - uses: actions/checkout@v4
       - uses: ./.github/actions/detect-package-metadata
         id: metadata
@@ -54,7 +56,7 @@ jobs:
       - name: Build, test, package
         uses: devcontainers/ci@v0.3
         with:
-          imageName: ghcr.io/mull-project/internal-${{ matrix.OS_NAME }}_${{ matrix.OS_VERSION }}_${{ matrix.LLVM_VERSION }}-ci
+          imageName: ghcr.io/mull-project/internal-ubuntu_${{ matrix.OS_VERSION }}_${{ matrix.LLVM_VERSION }}-ci
           configFile: ./.devcontainer/${{ matrix.OS_NAME }}_${{ matrix.OS_VERSION }}_${{ matrix.LLVM_VERSION }}/devcontainer.json
           runCmd: |
             cmake --preset mull -DMULL_VERSION=${{ steps.metadata.outputs.version }}${{ steps.metadata.outputs.suffix }}
@@ -66,7 +68,7 @@ jobs:
         uses: devcontainers/ci@v0.3
         if: env.CLOUDSMITH_API_KEY != null
         with:
-          imageName: ghcr.io/mull-project/internal-${{ matrix.OS_NAME }}_${{ matrix.OS_VERSION }}_${{ matrix.LLVM_VERSION }}-ci
+          imageName: ghcr.io/mull-project/internal-ubuntu_${{ matrix.OS_VERSION }}_${{ matrix.LLVM_VERSION }}-ci
           configFile: ./.devcontainer/${{ matrix.OS_NAME }}_${{ matrix.OS_VERSION }}_${{ matrix.LLVM_VERSION }}/devcontainer.json
           push: never
           runCmd: |
