--- a/.devcontainer/ubuntu_22.04_13/devcontainer.json
+++ b/.devcontainer/ubuntu_22.04_13/devcontainer.json
@@ -3,6 +3,10 @@
   "build": {
     "dockerfile": "Dockerfile"
   },
+  "runArgs": [
+    "--name",
+    "mull-ubuntu-22.04-LLVM-13"
+  ],
   "features": {
     "ghcr.io/devcontainers-extra/features/fish-apt-get:1": {},
     "ghcr.io/devcontainers/features/git:1": {},
