Add first unit tests

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -10,6 +10,7 @@ bazel_dep(name = "rules_cc", version = "0.1.1")
 bazel_dep(name = "spdlog", version = "1.15.1")
 bazel_dep(name = "reproc", version = "14.2.5")
 bazel_dep(name = "sqlite3", version = "3.49.1")
+bazel_dep(name = "googletest", version = "1.16.0")
 
 new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")
 http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
