--- a/tests/integration/BUILD
+++ b/tests/integration/BUILD
@@ -1,7 +1,6 @@
 load("@pypi//:requirements.bzl", "requirement")
-
-# load("@rules_cc//cc:defs.bzl", "cc_library")
-load("@rules_python//python:defs.bzl", "py_binary", "py_test")
+load("@rules_python//python:defs.bzl", "py_binary")
+load("//tests/integration:mull_integration_test.bzl", "mull_py_test")
 
 py_binary(
     name = "filecheck_runner",
@@ -11,33 +10,8 @@ py_binary(
     ],
 )
 
-py_test(
-    name = "a_test",
-    srcs = ["lit_runner.py"],
-    args = [
-        "-v",
-        "tutorials/hello-world/step-2-1-no-debug-no-config/sample.cpp",
-    ],
-    data = [
-        "tutorials/hello-world/step-2-1-no-debug-no-config/sample.cpp",
-        ":lit.cfg.py",
-        requirement("lit"),
-        ":filecheck_runner",
-        "//:mull-ast-frontend-18-gen",
-        "//:mull-ir-frontend-18-gen",
-        "@llvm_18//:clang",
-        "@llvm_18//:clangxx",
-        "@llvm_18//:llvm-profdata",
-    ],
-    env = {
-        "LLVM_VERSION_MAJOR": "18",
-    },
-    main = "lit_runner.py",
-    deps = [
-        requirement("lit"),
-        ":filecheck_runner",
-        # "//:mull-cxx-ir-frontend-18",
-        "//:mull_runner_18",
-        "@rules_python//python/runfiles",
-    ],
-)
+[mull_py_test(src = f) for f in glob(["**/*.cpp"])]
+
+# mull_py_test(
+#     src = "ast-search/arithmetic/01_add_to_sub/sample.cpp",
+# )
