--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -5,6 +5,8 @@ module(
     version = "1.0",
 )
 
+bazel_dep(name = "platforms", version = "0.0.11")
+
 bazel_dep(name = "toolchains_llvm", version = "1.3.0")
 git_override(
     module_name = "toolchains_llvm",
