--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -2,10 +2,11 @@
 
 module(
     name = "mull",
-    version = "1.0",
+    version = "0.25.0",
 )
 
 bazel_dep(name = "platforms", version = "0.0.11")
+bazel_dep(name = "rules_pkg", version = "1.1.0")
 
 bazel_dep(name = "toolchains_llvm", version = "1.3.0")
 git_override(
@@ -79,3 +80,6 @@ mull_deps.configure(versions = SUPPORTED_LLVM_VERSIONS)
 
 [use_repo(mull_deps, "mull_irm_%s" % v) for v in SUPPORTED_LLVM_VERSIONS]
 [use_repo(mull_deps, "llvm_%s" % v) for v in SUPPORTED_LLVM_VERSIONS]
+
+mull_package_info = use_extension("//:mull_package_info.bzl", "mull_package_info")
+use_repo(mull_package_info, "mull_package_info")
