--- a/.devcontainer/ubuntu_24.04_17/Dockerfile
+++ b/.devcontainer/ubuntu_24.04_17/Dockerfile
@@ -12,3 +12,5 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y \
   libc++-17-dev \
   libc++abi-17-dev \
   clang-17
+
+USER ubuntu
