--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -19,6 +19,12 @@ git_override(
 llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
 llvm.toolchain(
     llvm_version = "20.1.0",
+    stdlib = {
+        "darwin-x86_64": "libc++",
+        "darwin-aarch64": "libc++",
+        "linux-x86_64": "stdc++",
+        "linux-aarch64": "stdc++",
+    },
 )
 
 use_repo(llvm, "llvm_toolchain")
